<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color3_ofPalette"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_activityMain_update"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:background="@color/color1_ofPalette"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/download_Text"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="@color/color2_ofPalette"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toEndOf="@+id/Notification"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
        android:id="@+id/image_activityMain_update"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="11dp"
        android:background="@drawable/ic_circle"
        android:src="@drawable/ic_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Notification"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/white" />

        <TextView
            android:id="@+id/Notification"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text"
            android:layout_height="wrap_content"
            android:text="@string/update_text"
            app:background="@color/color1_ofPalette"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_activityMain_update">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/titles"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/directionsArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="@dimen/Subtitles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/finishDay"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/finishDay"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center|bottom"
                android:layout_marginEnd="20dp"
                android:text="@string/button3"
                android:textSize="@dimen/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/restaurant_name"
                android:textSize="@dimen/Subtitles"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/directionsText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/directions"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/ScheduleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="98dp"
                android:layout_marginBottom="39dp"
                android:text="@string/schedule"
                android:textSize="@dimen/text" />


            <Button
                android:id="@+id/startButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="2dp"
                android:text="@string/button"
                android:layout_marginEnd="50dp"
                android:textSize="@dimen/buttons"/>
            <Button
                android:id="@+id/detailsButton"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="2dp"
                android:text="@string/button2"
                android:layout_marginStart="50dp"
                android:textSize="@dimen/buttons"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>